Version History
===============

3.1.3 (unreleased)
------------------

* Added a MANIFEST.in to exclude the examples folder from being packaged with
  the egg to work around the SandboxViolation from EasyInstall when installing
  FSD via buildout on Windows systems.
  [cah190]


3.1.2 (2012-04-20)
------------------

* Added a 'use site default' option to the available editors list.  Thanks to
  David Carter for reporting this issue and supplying a patch.
  [cah190]

* Require Products.membrane >= 2.1.4 to get the property sheet typing fix which
  affects the ext_editor field.
  [cah190]


3.1.1 (2012-03-28)
------------------

* Added a sample-content profile. [pumazi]

* fsd_atoz_view and department_textual_view should now work on Department objects
  living outside the FacultyStaffDirectory root on a site.  Warning: external
  Departments will only work reliably for situations where there is a single
  FacultyStaffDirectory object in a site.  If there are multiple
  FacultyStaffDirectory objects, then use of external Departments will have
  undefined behavior.
  [cah190]

* Fixes to author.cpt to support Plone 4.x.  Thanks to Paul Roeland for reporting
  this problem and supplying a patch.
  [cah190]

* Fixed fsd_atoz_view to work with last names having first characters outside the
  A to Z range.  We now allow for any valid unicode character.  Thanks to
  Toni Haka-Risku for reporting this problem and supplying a patch which served
  as a starting point for this fix.
  [cah190]


3.1 (2012-03-16)
----------------

* Retagging as 3.1.
  [cah190]


3.1b1 (2011-08-18)
------------------

* Rework templates to reflect the Plone 4.0 layout changes.
  [esteele]

* All FSD content type interfaces now subclass IFacultyStaffDirectoryContent. 
  Q: Why didn't they do so previously?
  A: I have no idea.
  [esteele]

* Drop support for Plone releases below 4.0.
  [esteele]
  
* Remove the reliance on the documentactions viewlet (not shown by default in 