@@ -32,5 +32,18 @@
   <adapter for="..interfaces.department.IDepartment"
            provides="Products.membrane.interfaces.IGroup"
            factory=".department.Group" />
-  
+
+  <!-- Avoid membrane errors when enumerating groupings as users -->
+  <adapter for="..FacultyStaffDirectory.FacultyStaffDirectory"
+           provides="Products.membrane.interfaces.IMembraneUserObject"
+           factory=".not_a_user_object" />
+
+  <adapter for="..Classification.Classification"
+           provides="Products.membrane.interfaces.IMembraneUserObject"
+           factory=".not_a_user_object" />
+
+  <adapter for="..Committee.Committee"
+           provides="Products.membrane.interfaces.IMembraneUserObject"
+           factory=".not_a_user_object" />
+
 </configure>
